--- a/PHP/immy/public_html/.htaccess
+++ b/PHP/immy/public_html/.htaccess
@@ -1,13 +1,15 @@
 php_flag magic_qoutes_gpc Off
+# отключить экранирование кавычек, хостинги разные и мы сами будем управлять кавычками
 
 AddDefaultCharset utf-8
+# кодировка для сервера, указание в какой кодировке обрабатывать данные
 
 DirectoryIndex index.php 
+# что-бы сервер не искал другие файлы типа html и сразу в indexphp шёл
 
 RewriteEngine on
+# перенаправлять все запросы на единую точку входа, на файл indexphp
 
 RewriteCond %{REQUEST_FILENAME} !-f
-
 RewriteRule ^(.*) index.php
-
-# это всё настройка сервера надо открыть видео и откомментировать каждую строчку
+# если пользователь не запрашивает файл, то перенаправить его на indexphp
